--- a/styles.css
+++ b/styles.css
@@ -513,6 +513,10 @@
 }
 #bod{
   background-color: #333333;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
 }
 #dev{
   margin-top: 0%;
