--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 /* body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow-x: hidden;
-    width: 100%;
+  display: flex;
+  width: 700px;
+  height: 1000px;
+  justify-content: center;
+  margin: auto;
+  border: 2px solid gray;
+  overflow: hidden;
+  background-color: black;
 } */
  :root{
   --couleur: #F2AB01;
