--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,4 @@
-/* body{
-  display: flex;
-  width: 700px;
-  height: 1000px;
-  justify-content: center;
-  margin: auto;
-  border: 2px solid gray;
-  overflow: hidden;
-  background-color: black;
-} */
+
  :root{
   --couleur: #F2AB01;
  }
@@ -20,6 +11,7 @@
     border: 2px solid gray;
     overflow: hidden;
     background-color: black;
+    align-items: center;
 }
 .left{
     width: 40%;
